--- a/css/style.css
+++ b/css/style.css
@@ -39,12 +39,35 @@ h1 {
     flex-direction: column;
 }
 
+.photographer_section * {
+    text-align: center;
+}
+
 .photographer_section article h2 {
     color: #D3573C;
     font-size: 36px;
+    margin-bottom: 0px;
 }
 
 .photographer_section article img {
     height: 200px;
     width: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+    box-shadow: 0px 5px 15px 0px lightslategray;
+}
+
+.photographer_section article .location {
+    color: #901C1C;
+    font-size: 14px;
+}
+
+.photographer_section article .quote {
+    color: black;
+    font-size: 12px;
+}
+
+.photographer_section article .priceDay {
+    color: #757575;
+    font-size: 10px;
 }
