--- a/css/photographer.css
+++ b/css/photographer.css
@@ -8,6 +8,11 @@
     margin: 0 100px;
 }
 
+.photograph-header img {
+    height: auto;
+    width: 30%;
+}
+
 .contact_button {
     font-size: 20px;
     font-weight: bold;
