--- a/css/photographer.css
+++ b/css/photographer.css
@@ -2,15 +2,45 @@
     display: none;
 }
 
-.photograph-header {
-    background-color: #FAFAFA;
-    height: 300px;
-    margin: 0 100px;
+main {
+    margin-left: 100px;
+    margin-right: 100px;
 }
 
+.photograph-header {
+    display: grid;
+    background-color: #FAFAFA;
+    height: 300px;
+}
+
+.photograph-header article {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
+.presentation h1 {
+    margin-top: 0px;
+    margin-right: 0px;
+    color: #D3573C;
+    font-size: 60px;
+    font-weight : unset;
+}
+
+.location {
+    color: #901C1C;
+    font-size: 23px;
+}
+
+
 .photograph-header img {
-    height: auto;
-    width: 30%;
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+    box-shadow: 0px 5px 15px 0px lightslategray;
 }
 
 .contact_button {
