--- a/css/photographer.css
+++ b/css/photographer.css
@@ -125,113 +125,78 @@ form input {
     border-radius: 5px;
 }
 
-/* Global styles */
-
-:root {
-    --colorPrimaryDark: #0b132b;
-    --colorPrimaryLight: #494f61;
-    --colorPlaceholder: #9b9fa8;
-    --colorBackground: #eeeff0;
-    --colorBorder: #cdcfd3;
-    --colorAccent: #003bde;
-    --gutter: 0 16px;
-    --border: 1.5px solid var(--colorBorder);
-    --radius: 3px;
-}
-
-h5,
-p {
-    font-family: "Lato";
-    font-size: 14px;
-}
-
-#content {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    height: 100vh;
-    width: 100vw;
-    background-color: var(--colorBackground);
-}
-
-/* Input styling */
-
-.input {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    border: var(--border);
-    border-radius: var(--radius);
-    height: 36px;
-    width: 280px;
-    margin-top: 100px;
-    padding: var(--gutter);
-    background-color: white;
-}
-
-.input__active {
-    border-color: var(--colorAccent);
-    border-bottom-left-radius: 0px !important;
-    border-bottom-right-radius: 0px !important;
-}
-
-.input__placeholder {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.input:hover {
-    cursor: pointer;
-}
-
-.placeholder {
-    color: var(--colorPlaceholder);
-}
-
-.input__selected {
-    color: var(--colorPrimaryDark);
-}
-
-/* Dropdown styling */
-
-.structure {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    height: 200px;
-    width: 280px;
-    overflow: scroll;
-    background-color: white;
-    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1);
-    padding: 10px 0;
-}
-
-.structure>div {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 16px;
-}
-
-.structure>div:hover {
-    background-color: var(--colorAccent);
+#btDropdown {
+    font-size: 20px;
+    font-weight: bold;
     color: white;
+    padding: 16px;
+    width: 170px;
+    padding-left: 25px;
+    border: none;
+    background-color: #901C1C;
+    border-radius: 5px;
     cursor: pointer;
+    text-align: left;
+    margin-left: 50px;
+    position: relative;
 }
 
-.structure>div>h5 {
-    font-weight: 600;
-    margin-right: 4px;
+#btDropdown::before {
+    content: '';
+    width: 7px;
+    height: 7px;
+    border-right: 3px solid white;
+    border-bottom: 3px solid white;
+    transform: rotate(45deg);
+    position: absolute;
+    right: 20px;
+    top: 19px;
 }
 
-.structure>div>p {
-    font-weight: 400;
-    font-size: 13px;
-    color: var(--colorPlaceholder);
+#btDropdown:hover,
+#btDropdown:focus {
+    background-color: #D3573C;
 }
 
-.hide {
-    display: none;
+.dropdown-content {
+
+    position: absolute;
+    background-color: #901C1C;
+    min-width: 170px;
+    z-index: 1;
+    border-radius: 5px;
+    margin-left: 50px;
+}
+
+.dropdown-content p {
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+    padding: 16px;
+    padding-left: 25px;
+    cursor: pointer;
+    margin: 0px;
+
+}
+
+.dropdown-content p:hover {
+    background-color: #D3573C;
+}
+
+.dropdown-content p:first-child {
+    border-radius: 5px 5px 0 0;
+}
+
+.dropdown-content p:last-child {
+    border-radius: 0px 0px 5px 5px;
+}
+
+.dropdown-content p:last-child::after {
+    content: '';
+    background-color: white;
+    width: 140px;
+    height: 1px;
+    position: absolute;
+    left: 15px;
+    top: 0;
 }
