--- a/css/photographer.css
+++ b/css/photographer.css
@@ -261,3 +261,18 @@ form input {
     width: 20px;
     margin-left: 5px;
 }
+
+#likesAndPrice {
+    position: fixed;
+    bottom: 0px;
+    right: 40px;
+    width: 300px;
+    height: 50px;
+    background-color: #DB8876;
+    border-radius: 5px;
+}
+
+#likesAndPrice img {
+    height: 20px;
+    width: 20px;
+}
