--- a/css/photographer.css
+++ b/css/photographer.css
@@ -263,11 +263,14 @@ form input {
 }
 
 #likesAndPrice {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     position: fixed;
     bottom: 0px;
     right: 40px;
-    width: 300px;
     height: 50px;
+    width: 300px;
     background-color: #DB8876;
     border-radius: 5px;
 }
@@ -275,4 +278,15 @@ form input {
 #likesAndPrice img {
     height: 20px;
     width: 20px;
+    filter: brightness(0);
+}
+
+#likesAndPrice * {
+    font-size: 20px;
+    font-weight: lighter;
+}
+
+#likes {
+    display: flex;
+    align-items : center;
 }
