--- a/css/photographer.css
+++ b/css/photographer.css
@@ -68,13 +68,20 @@ main {
 .modal {
     border-radius: 5px;
     background-color: #DB8876;
-    width: 50%;
+    max-width: 500px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
     padding: 35px;
     margin: auto;
+
+    position: absolute;
+    top: 0;
+    overflow: hidden;
+    z-index: 100;
+    right: 15%;
+    left: 15%;
 }
 
 .modal header {
@@ -109,14 +116,15 @@ form div {
     flex-direction: column;
     width: 100%;
     align-items: self-start;
-    margin-bottom: 26px;
+    /*margin-bottom: 26px;*/
 }
 
 form input {
     width: 100%;
-    height: 68px;
-    border: none;
+    height: 40px;
     border-radius: 5px;
+    border: 2px solid #DB8876;
+    font-size: larger;
 }
 
 .gallery-section {
@@ -293,4 +301,28 @@ form input {
 #likes {
     display: flex;
     align-items: center;
+}
+
+/*Formulaire*/
+#message_input {
+    height: 200px;
+}
+
+.errorStyle {
+    color: #ee0c0c;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.errorForm {
+    border: 2px solid #ee0c0c;
+}
+
+input {
+    padding: 8px;
+    outline: none;
+}
+
+.no-scroll {
+    overflow: hidden;
 }
