--- a/css/photographer.css
+++ b/css/photographer.css
@@ -127,7 +127,7 @@ form input {
     font-size: larger;
 }
 
-.gallery-section {
+.gallery-container {
     width: 100%;
     margin-right: auto;
     margin-left: auto;
