--- a/css/photographer.css
+++ b/css/photographer.css
@@ -327,3 +327,32 @@ input {
 .no-scroll {
     overflow: hidden;
 }
+
+/*LightBox*/
+#lightbox-screen {
+    position: fixed;
+    width: 100vw;
+    height: 100vw;
+    top: 0;
+    left: 0;
+    background-color: white;
+    z-index: 9999;
+    text-align: center;
+}
+
+#lightbox-screen .mediaShow {
+    position: absolute;
+    left : 15%;
+    height: 900px;
+    width: 1050px;
+    min-width: 100vh;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#lightbox-screen .mediaShow img {
+    max-width: 100%;
+    max-height: 100%;
+    margin: auto;
+}
