--- a/css/photographer.css
+++ b/css/photographer.css
@@ -331,8 +331,8 @@ input {
 /*LightBox*/
 #lightbox-screen {
     position: fixed;
-    width: 100vw;
-    height: 100vw;
+    width: 100%;
+    height: 100%;
     top: 0;
     left: 0;
     background-color: white;
@@ -341,18 +341,20 @@ input {
 }
 
 #lightbox-screen .mediaShow {
-    position: absolute;
-    left : 15%;
-    height: 900px;
-    width: 1050px;
-    min-width: 100vh;
-    display: inline-flex;
-    justify-content: center;
+    position: relative;
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
 }
 
 #lightbox-screen .mediaShow img {
-    max-width: 100%;
-    max-height: 100%;
-    margin: auto;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: absolute;
+    max-width: 80%;
+    max-height: 80%;
+    object-fit: cover;
 }
