--- a/css/photographer.css
+++ b/css/photographer.css
@@ -329,40 +329,38 @@ input {
 }
 
 /*LightBox*/
+
 #lightbox-screen {
+    display: flex;
     position: fixed;
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
     background-color: white;
-    z-index: 9999;
-    /*text-align: center;*/
+    z-index: 20;
 }
 
-#lightbox-screen .mediaShow {
-    position: relative;
+.lightboxScreenContainer {
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
-    height: 100%;
-    width: 100%;
+    flex-direction: column;
+    margin: auto;
+
 }
 
-#lightbox-screen .mediaShow img {
-    background-position: center;
-    background-repeat: no-repeat;
-    position: absolute;
-    max-width: 80%;
-    max-height: 80%;
-    object-fit: cover;
+.mediaShow {
+    text-align: center;
+    line-height: 1px;
+}
+
+.mediaShow img {
+    max-height: 80vh;
 }
 
 #lightbox-screen p {
-    position: relative;
-    bottom: 90px;
-    left: 26%;
+    display: flex;
+    font-size: 1.5rem;
     color: #901C1C;
 }
 
@@ -373,6 +371,7 @@ input {
     background-color: transparent;
     border: none;
     font-size: 4em;
+    z-index: 30;
 }
 
 .btNext {
