--- a/css/photographer.css
+++ b/css/photographer.css
@@ -63,6 +63,7 @@ main {
     background-color: #901C1C;
     border-radius: 5px;
     cursor: pointer;
+    transition: background-color 200ms ease-in-out;
 }
 
 .modal {
@@ -184,10 +185,13 @@ form input {
     position: relative;
     border-top: 1px solid #FFF;
     border-bottom: 1px solid #FFF;
+    transition: background-color 200ms ease-in-out;
 }
 
 .btDropdown:hover,
-.btDropdown:focus {
+.btDropdown:focus,
+.contact_button:hover,
+.contact_button:focus {
     background-color: #D3573C;
 }
 
@@ -202,6 +206,7 @@ form input {
     right: 20px;
     top: 22px;
     z-index: 10;
+    transition: transform 200ms ease-in;
 }
 
 .btDropdown:focus::after {
@@ -230,6 +235,7 @@ form input {
     padding-left: 25px;
     cursor: pointer;
     margin: 0px;
+    transition: background-color 200ms ease-in-out;
 }
 
 .dropdown-content p:hover {
