--- a/css/photographer.css
+++ b/css/photographer.css
@@ -62,6 +62,7 @@ main {
     border: none;
     background-color: #901C1C;
     border-radius: 5px;
+    margin-top: 20px;
     cursor: pointer;
     transition: background-color 200ms ease-in-out;
 }
@@ -76,7 +77,6 @@ main {
     justify-content: space-between;
     padding: 35px;
     margin: auto;
-
     position: absolute;
     top: 0;
     overflow: hidden;
@@ -95,9 +95,9 @@ main {
 }
 
 .modal header h2 {
-    font-size: 64px;
+    font-size: 3em;
     font-weight: normal;
-    text-align: center;
+    text-align: left;
 }
 
 form {
@@ -109,7 +109,7 @@ form {
 
 form label {
     color: #312E2E;
-    font-size: 36px;
+    font-size: 2em;
 }
 
 form div {
@@ -151,6 +151,11 @@ form input {
     object-position: center;
     border-radius: 5px;
     cursor: pointer;
+}
+
+.media-container :first-child {
+    background-color: transparent;
+    border : none;
 }
 
 .reviewElement {
@@ -278,6 +283,8 @@ form input {
     width: 20px;
     margin-left: 5px;
     cursor: pointer;
+    border : none;
+    background-color: transparent;
 }
 
 #likesAndPrice {
