--- a/css/photographer.css
+++ b/css/photographer.css
@@ -100,6 +100,11 @@ main {
     text-align: left;
 }
 
+.closeModalBt {
+    background-color: transparent;
+    border: none;
+}
+
 form {
     display: flex;
     width: 100%;
@@ -153,9 +158,10 @@ form input {
     cursor: pointer;
 }
 
-.media-container :first-child {
+.media-container .picture {
     background-color: transparent;
     border : none;
+    padding: 0px;
 }
 
 .reviewElement {
