--- a/css/photographer.css
+++ b/css/photographer.css
@@ -67,7 +67,36 @@ main {
     transition: background-color 200ms ease-in-out;
 }
 
-.modal {
+/*Formulaire*/
+#formulaire {
+    margin-top: 50px;
+}
+
+#message_input {
+    height: 200px;
+}
+
+.errorStyle {
+    color: #ee0c0c;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.errorForm {
+    border: 2px solid #ee0c0c;
+}
+
+input {
+    padding: 8px;
+    outline: none;
+}
+
+.no-scroll {
+    overflow: hidden;
+}
+
+.modal-content,
+.message-validation {
     border-radius: 5px;
     background-color: #DB8876;
     max-width: 500px;
@@ -85,16 +114,16 @@ main {
     left: 15%;
 }
 
-.modal header {
+.modal-content header {
     justify-content: space-between;
     width: 100%;
 }
 
-.modal header img {
+.modal-content header img {
     cursor: pointer;
 }
 
-.modal header h2 {
+.modal-content header h2 {
     font-size: 3em;
     font-weight: normal;
     text-align: left;
@@ -125,14 +154,42 @@ form div {
     /*margin-bottom: 26px;*/
 }
 
-form input {
+form p {
     width: 100%;
+    margin: 0;
+}
+
+form input {
+    width: 95%;
     height: 40px;
     border-radius: 5px;
     border: 2px solid #DB8876;
     font-size: larger;
 }
 
+#formulaire textarea {
+    width: 95%;
+    border-radius: 5px;
+    padding: 8px;
+    border: 2px solid #DB8876;
+    font-size: larger;
+    resize: none;
+    font-size: larger;
+}
+
+.message-validation {
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 15px 8%;
+    margin: 15px auto;
+    width: 100%;
+    height: 700px;
+    text-align: center;
+}
+
+/* Gallery */
 .gallery-container {
     width: 100%;
     margin-right: auto;
@@ -160,7 +217,7 @@ form input {
 
 .media-container .picture {
     background-color: transparent;
-    border : none;
+    border: none;
     padding: 0px;
 }
 
@@ -289,7 +346,7 @@ form input {
     width: 20px;
     margin-left: 5px;
     cursor: pointer;
-    border : none;
+    border: none;
     background-color: transparent;
 }
 
@@ -321,44 +378,6 @@ form input {
 #likes {
     display: flex;
     align-items: center;
-}
-
-/*Formulaire*/
-#formulaire {
-    margin-top: 50px;
-}
-
-#message_input {
-    height: 200px;
-}
-
-.errorStyle {
-    color: #ee0c0c;
-    font-size: 15px;
-    font-weight: bold;
-}
-
-.errorForm {
-    border: 2px solid #ee0c0c;
-}
-
-input {
-    padding: 8px;
-    outline: none;
-}
-
-.no-scroll {
-    overflow: hidden;
-}
-
-#formulaire textarea {
-    width: 100%;
-    border-radius: 5px;
-    padding: 8px;
-    border: 2px solid #DB8876;
-    font-size: larger;
-    resize: none;
-    font-size: larger;
 }
 
 /*LightBox*/
